<resources>
    <string name="app_name">WhatsApp Clone</string>
    <string name="google">Google</string>
    <string name="facebook">FaceBook</string>
    <string name="sign_in">Sign In</string>
    <string name="signup_with_phone">SignUp with Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_to_whatsapp">New to WhatApp?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_message">Last Message</string>
    <string name="default_web_client_id1" translatable="false">242278391856-qajsueq4940s69dokb151so00qtihhrn.apps.googleusercontent.com</string>
    <string name="type_a_message">Type a Message</string>
    <string name="receiver_message">Receiver Message</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="sender_message">Sender Message</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="group_chat">Group Chat</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="invite_a_friend">Invite A Friend</string>
    <string name="notifications">Notifications</string>
</resources>