<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_arrow_back" />

    <LinearLayout
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backArrow"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/defaultprofile"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/plus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="-35dp"
            android:src="@drawable/ic_add"
            app:civ_circle_background_color="@color/fb_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/about"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_save_bg"
            android:padding="5dp"
            android:text="@string/save"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInfo"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/setting_ll_bg"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/notifications"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_notifications"
            app:drawableTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/invite_a_friend"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_group"
            app:drawableTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/about_us"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_info"
            app:drawableTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/help"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_help"
            app:drawableTint="@color/colorPrimary" />
    </LinearLayout>

</RelativeLayout>